Regression: Moving frame node jittering while cursor is still #106043

Closed
opened 2023-03-23 14:40:07 +01:00 by Simon Thommes · 4 comments
Member

System Information
Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.5.0 Release Candidate, branch: blender-v3.5-release, commit date: 2023-03-22 22:18, hash: dcd000b3542f
Worked: (newest version of Blender that worked as expected)

Caused by: 6d3ce8273a

Short description of error
bug_jittering_UI-2023-03-23_14.34.52.mp4
When picking up a frame not to move it and keeping the cursor still whithout confirming the operation it's jittering around.

Exact steps for others to reproduce the error
From default startup:

  • go to geometry nodes workspace
  • create new node-tree
  • create frame node around group input node
  • drag frame node to the side and hold the cursor still without letting go
**System Information** Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.5.0 Release Candidate, branch: blender-v3.5-release, commit date: 2023-03-22 22:18, hash: `dcd000b3542f` Worked: (newest version of Blender that worked as expected) Caused by: 6d3ce8273a448f20c947e14e71934212202e4c3b **Short description of error** [bug_jittering_UI-2023-03-23_14.34.52.mp4](/attachments/2f5bde12-03ef-4748-a47d-eedb2a97bb21) When picking up a frame not to move it and keeping the cursor still whithout confirming the operation it's jittering around. **Exact steps for others to reproduce the error** From default startup: - go to geometry nodes workspace - create new node-tree - create frame node around group input node - drag frame node to the side and hold the cursor still without letting go
Simon Thommes added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-23 14:40:07 +01:00
Iliya Katushenock self-assigned this 2023-03-23 16:01:33 +01:00
Iliya Katushenock changed title from Moving frame node jittering while cursor is still to Regression: Moving frame node jittering while cursor is still 2023-03-23 16:08:46 +01:00
Member

Proposed PR brings back the original bug afaict, will also have a look.

Proposed PR brings back the original bug afaict, will also have a look.
Member

frame_node_prepare_for_draw introduces the noise.

Will look a bit more (as in why this does not jitter while drawing elsewhere), but I can imagine one solution to just round for the transform system here (to get rid of the noise).

`frame_node_prepare_for_draw` introduces the noise. Will look a bit more (as in why this does not jitter while drawing elsewhere), but I can imagine one solution to just round for the transform system here (to get rid of the noise).
Member

rounding the offset seems fine (not really noticable even at greater UI scale factor), so will post a PR for that.

rounding the offset seems fine (not really noticable even at greater UI scale factor), so will post a PR for that.
Member

@mod_moder : will self-assign if you dont mind (since this is caused by my commit), thx looking into it anyways!

@mod_moder : will self-assign if you dont mind (since this is caused by my commit), thx looking into it anyways!
Philipp Oeser self-assigned this 2023-03-24 11:42:19 +01:00
Iliya Katushenock removed their assignment 2023-03-24 14:32:44 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-30 14:02:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106043
No description provided.